Fixed overflow bug

--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -21,6 +21,8 @@ header h1 {
 nav ul {
     list-style: none;
     padding: 0;
+    overflow-x: hidden;
+
 }
 
 nav ul li {
@@ -60,10 +62,19 @@ main {
     gap: 1rem;
 }
 
+.cartButton{
+    border: none;
+    border-radius: 3px;
+}
 .category-item {
     flex: 1 1 calc(33.333% - 1rem);
     box-sizing: border-box;
     text-align: center;
+    transition: transform 0.3s ease; /* Add transition for smooth effect */
+}
+
+.category-item:hover {
+    transform: scale(1.05); /* Slightly expand the item on hover */
 }
 
 .category-item img {
@@ -79,8 +90,56 @@ main {
     color: white;
 }
 
-.category-item:hover {
-    transform: scale(1.05); /* Slightly expand the item on hover */
+.product-list {
+    list-style-type: none; /* Remove bullets from product lists */
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
+}
+
+.product-item {
+    position: relative;
+    width: 70%;
+    height: 50%;
+    margin: 10px;
+}
+
+.product-image {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.product-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.product-info {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+    border-radius: 0 0 8px 8px;
+}
+
+.product-info h3 {
+    margin: 0;
+    font-size: 1.2rem;
+}
+
+.product-info p {
+    margin: 5px 0;
 }
 
 footer {
